GetRoute should return an empty list when start == end